STUD-325: Create Earnings fee transaction
